--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 title                    : "Prof. Paul Haskell-Dowland"
 title_separator          : "-"
 name                     : &name "Paul Haskell-Dowland"
-description              : &description "personal description"
+description              : &description "25 years of experience in cyber security research and education leadership in both the UK and Australia."
 url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
