--- a/_config.yml
+++ b/_config.yml
@@ -27,29 +27,29 @@ author:
   bio              : "Short biography for the left-hand sidebar"
   location         : "Perth, Australia"
   employer         : "Edith Cowan University"
-  uri              : # URL
+  uri              : "https://www.ecu.edu.au/schools/science/staff/profiles/associate-deans/dr-paul-haskell-dowland"
   email            : "p.haskelldowland@ecu.edu.au" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?user=vNCUqkMAAAAJ"
   impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : "https://orcid.org/0000-0003-1365-0929"
   semantic         : # URL
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : # URL
-  scopus           : # URL
+  researchgate     : "https://www.researchgate.net/profile/Paul_Haskell-Dowland"
+  scopus           : "https://www.scopus.com/authid/detail.uri?authorId=6602725125"
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : "pdowland"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  bluesky          : # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
@@ -66,7 +66,7 @@ author:
   steam            : # Username
   telegram         : # URL
   tumblr           : # Username
-  twitter          : # Username for X / Twitter
+  twitter          : "pdowland"
   vine             : # Username
   weibo            : # Username
   wikipedia        : # Username
