--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ title                    : "Prof. Paul Haskell-Dowland"
 title_separator          : "-"
 name                     : &name "Paul Haskell-Dowland"
 description              : &description "25 years of experience in cyber security research and education leadership in both the UK and Australia."
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
+url                      : "https://test.haskell-dowland.com"
+baseurl                  : "/phdweb"
 repository               : "academicpages/academicpages.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
@@ -36,7 +36,7 @@ author:
   impactstory      : # URL
   orcid            : "https://orcid.org/0000-0003-1365-0929"
   semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  pubmed           : # URL
   researchgate     : "https://www.researchgate.net/profile/Paul_Haskell-Dowland"
   scopus           : "https://www.scopus.com/authid/detail.uri?authorId=6602725125"
 
