--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 title                    : "Prof. Paul Haskell-Dowland"
 title_separator          : "-"
 name                     : &name "Paul Haskell-Dowland"
-description              : &description "25 years of experience in cyber security research and education leadership in both the UK and Australia."
+description              : &description "Prof. Paul Haskell-Dowland has 25 years of experience in cyber security research and education leadership in both the UK and Australia."
 url                      : "https://test.haskell-dowland.com"
 baseurl                  : "/phdweb"
 repository               : "academicpages/academicpages.github.io"
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.jpg"
   name             : "Paul Haskell-Dowland"
   pronouns         : "he/him/his"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Professor of Cyber Security Practice with 25 years of experience in cyber security research and education leadership in both the UK and Australia."
   location         : "Perth, Australia"
   employer         : "Edith Cowan University"
   uri              : "https://www.ecu.edu.au/schools/science/staff/profiles/associate-deans/dr-paul-haskell-dowland"
